--- a/server/package.json
+++ b/server/package.json
@@ -12,18 +12,22 @@
   "license": "MIT",
   "dependencies": {
     "@types/body-parser": "^1.16.5",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.0.37",
+    "@types/sqlite3": "^3.1.8",
     "body-parser": "^1.18.2",
+    "dotenv": "^16.0.3",
     "express": "^4.15.4",
     "nodemailer": "^6.1.1",
-    "request": "0.0.1"
+    "request": "^2.88.2",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.8.9",
+    "@types/jasmine": "^4.3.1",
     "@types/request-promise": "^4.1.38",
-    "jasmine": "^2.8.0",
+    "jasmine": "^4.6.0",
     "jasmine-promises": "^0.4.1",
-    "request-promise": "^0.0.1",
-    "typescript": "^3.3.3333"
+    "request-promise": "^4.2.6",
+    "typescript": "^5.0.2"
   }
 }
