--- a/server/package.json
+++ b/server/package.json
@@ -2,28 +2,31 @@
   "name": "server",
   "version": "0.0.1",
   "description": "Servidor",
+  "type": "module",
   "main": "server.ts",
   "scripts": {
-    "test": "npm run tsc && jasmine --config=./spec/support/jasmine.json",
-    "tsc": "tsc",
-    "start": "npm run tsc && node typeScript/server.js"
+    "start": "tsc && node dest/server.js"
   },
   "author": "Daniel Bastos",
   "license": "MIT",
   "dependencies": {
-    "@types/body-parser": "^1.16.5",
-    "@types/express": "^4.0.37",
-    "body-parser": "^1.18.2",
-    "express": "^4.15.4",
-    "request": "^2.34",
-    "nodemailer": "^6.1.1"
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "^2.8.9",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/request-promise": "^4.1.38",
+    "concurrently": "^7.6.0",
     "jasmine": "^2.8.0",
     "jasmine-promises": "^0.4.1",
-    "request-promise": "^4.2.2",
-    "typescript": "^3.3.3333"
+    "nodemon": "^2.0.21",
+    "request-promise": "^4.2.2"
   }
 }
