--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,15 +1,20 @@
 {
-    "compilerOptions": {
-        "target": "ES2015",
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "sourceMap": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "lib": [ "es2015", "dom" ],
-        "noImplicitAny": true,
-        "outDir": "typeScript",
-        "suppressImplicitAnyIndexErrors": true
-    },
-    "compileOnSave": true,
+  "compilerOptions": {
+    "target": "ES6",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "lib": ["es2015", "dom", "ES6"],
+    "rootDir": "./src",
+    "outDir": "./dest",
+    "esModuleInterop": true
+  },
+  "compileOnSave": true,
+  "exclude": [
+    "node_modules",
+    "./node_modules",
+    "./node_modules/*",
+    "./node_modules/@types/node/index.d.ts"
+  ]
 }
