added UserService and db client

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "server.ts",
   "scripts": {
-    "start": "tsc && node dest/server.js"
+    "start": "tsc && node typeScript/server.js"
   },
   "author": "Daniel Bastos",
   "license": "MIT",
