updating es version

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,7 +6,11 @@
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": ["es2015", "dom", "ES6"],
+    "lib": [
+      "es2021",
+      "dom",
+      "ES6"
+    ],
     "noImplicitAny": true,
     "outDir": "typeScript",
     "esModuleInterop": true
