--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "@cucumber/cucumber": "^9.1.0",
     "react-router-dom": "^6.10.0"
+  },
+  "devDependencies": {
+    "cypress": "^12.9.0"
   }
 }
