--- a/web-app/package.json
+++ b/web-app/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components-react-native": "^5.2.1"
+    "@types/styled-components-react-native": "^5.2.1",
+    "cypress": "^12.9.0"
   }
 }
