--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
-    "cypress": "^12.9.0"
+    "cypress": "^12.9.0",
+    "cypress-cucumber-preprocessor": "^4.3.1"
   }
 }
